--- a/userfront/src/app/components/login/login.component.html
+++ b/userfront/src/app/components/login/login.component.html
@@ -24,7 +24,9 @@
                             <input [(ngModel)]="data.password" name="password" class="form-control input-md" type="password" required>
                         </div>
                     </div>
-
+                    <div *ngIf="loginFail" class="alert alert-danger">
+                            Invalid username or password.
+                    </div>
                     <div class="form-group">
                         <div class="">
                             <input type="submit" id="button1id" value="Login" name="button1id" class="btn btn-success" [disabled]="!data.valid" (click)="login(data)">
