Omogućen rad admina sa dodatnim uslugama.

--- a/admin/admin-front/src/app/accomodation-type/accomodation-type.component.html
+++ b/admin/admin-front/src/app/accomodation-type/accomodation-type.component.html
@@ -25,7 +25,7 @@
       <div class="td">Action</div>
     </div>
   </div>
-  <div class="tbody" *ngFor="let acc of accomodations; let i = index">
+  <div class="tbody" *ngFor="let acc of accomodations;">
     <form class="tr" #data="ngForm">
       <div class="td">{{ acc.name }}</div>
       <div class="td">
