--- a/admin/admin-front/src/app/bonus-types/bonus-types.component.html
+++ b/admin/admin-front/src/app/bonus-types/bonus-types.component.html
@@ -1,3 +1,68 @@
-<p>
-  bonus-types works!
-</p>
+<head>
+  <title>Manage users</title>
+</head>
+
+<ul>
+  <li>
+    <a routerLink="../users">Users</a>
+  </li>
+  <li>
+    <a routerLink="../agents">Agents</a>
+  </li>
+  <li>
+    <a routerLink="../comments">Comments</a>
+  </li>
+  <li>
+    <a routerLink="../acc-type">Types</a>
+  </li>
+  <li>
+    <a routerLink="../acc-category">Categories</a>
+  </li>
+  <li>
+    <a routerLink="../bonus-types">Bonus Types</a>
+  </li>
+</ul>
+
+<div class="table">
+  <div class="thead">
+    <div class="tr">
+      <div class="td">Name</div>
+      <div class="td">Change to</div>
+      <div class="td">Action</div>
+    </div>
+  </div>
+  <div class="tbody" *ngFor="let b of bonus;">
+    <form class="tr" #data="ngForm">
+      <div class="td">{{ b.name }}</div>
+      <div class="td">
+        <input type="text" [(ngModel)]="data.name" name="name">
+      </div>
+      <div class="td action">
+        <button (click)="editBonus(b.id, data.name, b.version)">EDIT</button>&nbsp; &nbsp;
+        <button (click)="deleteBonus(b.id)">DELETE</button>
+      </div>
+    </form>
+  </div>
+</div>
+
+<br />
+<br />
+
+<div class="table">
+  <div class="thead">
+    <div class="tr">
+      <div class="td">Add new bonus service</div>
+    </div>
+  </div>
+  <div class="tbody">
+    <form class="tr" #myForm="ngForm">
+      <div class="td">Name:</div>
+      <div class="td">
+        <input type="text" [(ngModel)]="myForm.bonusName" name="bonusName">
+      </div>
+      <div class="td action">
+          <input type="submit" value="SUBMIT" (click)="newBonus(myForm.bonusName); myForm.reset();">
+      </div>
+    </form>
+  </div>
+</div>
