--- a/admin/admin-front/src/app/acc-category/acc-category.component.html
+++ b/admin/admin-front/src/app/acc-category/acc-category.component.html
@@ -1,5 +1,5 @@
 <head>
-  <title>Manage users</title>
+  <title>Manage categories</title>
 </head>
 
 <ul>
@@ -13,10 +13,13 @@
     <a routerLink="../comments">Comments</a>
   </li>
   <li>
-    <a routerLink="../acc-type">Accomodation Types</a>
+    <a routerLink="../acc-type">Types</a>
   </li>
   <li>
-    <a routerLink="../acc-category">Accomodation categories</a>
+    <a routerLink="../acc-category">Categories</a>
+  </li>
+  <li>
+    <a routerLink="../bonus-types">Bonus Types</a>
   </li>
 </ul>
 
