--- a/admin/admin-front/src/app/agents/agents.component.html
+++ b/admin/admin-front/src/app/agents/agents.component.html
@@ -13,7 +13,13 @@
     <a routerLink="../comments">Comments</a>
   </li>
   <li>
-    <a routerLink="../acc-type">Accomodation Types</a>
+    <a routerLink="../acc-type">Types</a>
+  </li>
+  <li>
+    <a routerLink="../acc-category">Categories</a>
+  </li>
+  <li>
+    <a routerLink="../bonus-types">Bonus Types</a>
   </li>
 </ul>
 
